[gd_scene load_steps=9 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://stage1.gd" type="Script" id=2]
[ext_resource path="res://thorn.gd" type="Script" id=3]
[ext_resource path="res://candy.png" type="Texture" id=4]
[ext_resource path="res://sugar.gd" type="Script" id=5]
[ext_resource path="res://background/background1.jpg" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.11755, 14.281 )

[sub_resource type="CircleShape2D" id=2]

[node name="stage1" type="Node2D"]
position = Vector2( 487, 289 )
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 27, 9 )
scale = Vector2( 4.95826, 5.18869 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 27, 9 )
scale = Vector2( 1.91104, 1.84484 )
texture = ExtResource( 6 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -488, -293 )
collision_layer = 2

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D"]
color = Color( 0.662745, 0.376471, 0.823529, 0.784314 )
polygon = PoolVector2Array( 0, 2, 1, 601, 1024, 598, 1024, 2, 94, 1, 94, 64, 973, 63, 971, 547, 587, 550, 587, 321, 473, 319, 472, 540, 85, 544, 94, -1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 0, 2, -1, 600, 1023, 597, 1023, 3, 86, 1, 91, 66, 971, 65, 971, 549, 590, 545, 586, 321, 473, 321, 472, 537, 87, 539, 91, 3 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D2"]
color = Color( 0.662745, 0.376471, 0.823529, 0.784314 )
polygon = PoolVector2Array( -222, -106, 298, -103, 298, 178, 227, 178, 227, -41, -224, -45 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
polygon = PoolVector2Array( -223, -105, -224, -43, 224, -41, 226, 177, 297, 178, 297, -102 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( -271, 106 )
scale = Vector2( 0.211996, 0.718367 )
collision_layer = 2

[node name="Polygon2D" type="Polygon2D" parent="StaticBody2D3"]
color = Color( 0.662745, 0.376471, 0.823529, 0.784314 )
polygon = PoolVector2Array( -254, -107, 471.707, -105.795, 471.707, 201.847, 188.683, 201.847, 188.683, -40.3693, -253, -44 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D3"]
polygon = PoolVector2Array( -255, -108, -252, -43, 183.962, -43.1177, 188.683, 200.455, 476.424, 200.455, 481.141, -107.187 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( -117, 146 )

[node name="Camera2D" type="Camera2D" parent="player"]
scale = Vector2( 1.00118, 1.00808 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_top = 0.4
drag_margin_bottom = 0.4

[node name="thorn" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="thorn"]
position = Vector2( 477, 205 )
scale = Vector2( 0.641509, 3.36111 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="thorn"]
scale = Vector2( 1.00125, 1 )
color = Color( 0.329412, 0.627451, 0.784314, 1 )
polygon = PoolVector2Array( 483, 156, 470, 165, 482, 173, 471, 181, 481, 189, 470, 199, 482, 206, 470, 216, 482, 224, 471, 232, 482, 240, 469, 247, 484, 254 )

[node name="thorn8" type="Area2D" parent="."]
position = Vector2( -714, -96 )
scale = Vector2( 1, 1.34578 )
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="thorn8"]
position = Vector2( 478.207, 205 )
scale = Vector2( 0.641509, 3.36111 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="thorn8"]
color = Color( 0.329412, 0.627451, 0.784314, 1 )
polygon = PoolVector2Array( 483, 156, 470, 165, 482, 173, 471, 181, 481, 189, 470, 199, 482, 206, 470, 216, 482, 224, 471, 232, 482, 240, 469, 247, 484, 254 )

[node name="thorn4" type="Area2D" parent="."]
position = Vector2( 121, 231 )
rotation = -1.56319
scale = Vector2( 0.954911, 0.300613 )
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="thorn4"]
position = Vector2( 477, 205 )
scale = Vector2( 0.641509, 3.36111 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="thorn4"]
color = Color( 0.329412, 0.627451, 0.784314, 1 )
polygon = PoolVector2Array( 483, 156, 470, 165, 482, 173, 471, 181, 481, 189, 470, 199, 482, 206, 470, 216, 482, 224, 471, 232, 482, 240, 469, 247, 484, 254 )

[node name="thorn5" type="Area2D" parent="."]
position = Vector2( -20, 232 )
rotation = -1.56319
scale = Vector2( 0.956994, 0.290834 )
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="thorn5"]
position = Vector2( 477, 205 )
scale = Vector2( 0.641509, 3.36111 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="thorn5"]
color = Color( 0.329412, 0.627451, 0.784314, 1 )
polygon = PoolVector2Array( 483, 156, 470, 165, 482, 173, 471, 181, 481, 189, 470, 199, 482, 206, 470, 216, 482, 224, 471, 232, 482, 240, 469, 247, 484, 254 )

[node name="thorn2" type="Area2D" parent="."]
position = Vector2( -255, -311 )
scale = Vector2( 0.997406, 1.71066 )
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="thorn2"]
position = Vector2( 477, 205 )
scale = Vector2( 0.641509, 3.36111 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="thorn2"]
color = Color( 0.329412, 0.627451, 0.784314, 1 )
polygon = PoolVector2Array( 483, 156, 470, 165, 482, 173, 471, 181, 481, 189, 470, 199, 482, 206, 470, 216, 482, 224, 471, 232, 482, 240, 469, 247, 484, 254 )

[node name="thorn3" type="Area2D" parent="."]
position = Vector2( 74, 274 )
rotation = -3.12966
scale = Vector2( 0.98521, 1.96807 )
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="thorn3"]
position = Vector2( 477, 205 )
scale = Vector2( 0.641509, 3.36111 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="thorn3"]
color = Color( 0.329412, 0.627451, 0.784314, 1 )
polygon = PoolVector2Array( 483, 156, 470, 165, 482, 173, 471, 181, 481, 189, 470, 199, 482, 206, 470, 216, 482, 224, 471, 232, 482, 240, 469, 247, 484, 254 )

[node name="thorn6" type="Area2D" parent="."]
position = Vector2( 250, 146 )
rotation = -3.12966
scale = Vector2( 0.959046, 0.722177 )
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="thorn6"]
position = Vector2( 477, 205 )
scale = Vector2( 0.641509, 3.36111 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="thorn6"]
color = Color( 0.329412, 0.627451, 0.784314, 1 )
polygon = PoolVector2Array( 483, 156, 470, 165, 482, 173, 471, 181, 481, 189, 470, 199, 482, 206, 470, 216, 482, 224, 471, 232, 482, 240, 469, 247, 484, 254 )

[node name="thorn7" type="Area2D" parent="."]
position = Vector2( 25, -216 )
rotation = -4.72124
scale = Vector2( 0.953372, 1.70566 )
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="thorn7"]
position = Vector2( 477, 205 )
scale = Vector2( 0.641509, 3.36111 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="thorn7"]
color = Color( 0.329412, 0.627451, 0.784314, 1 )
polygon = PoolVector2Array( 483, 156, 470, 165, 482, 173, 471, 181, 481, 189, 470, 199, 482, 206, 470, 216, 482, 224, 471, 232, 482, 240, 469, 247, 484, 254 )

[node name="sugar" type="Area2D" parent="."]
position = Vector2( 32, 3 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="sugar"]
position = Vector2( -280, 90 )
scale = Vector2( 0.168115, 0.195211 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sugar"]
position = Vector2( -282, 91 )
shape = SubResource( 2 )

[connection signal="body_entered" from="thorn" to="thorn" method="_on_thorn_body_entered"]
[connection signal="body_entered" from="thorn8" to="thorn8" method="_on_thorn_body_entered"]
[connection signal="body_entered" from="thorn4" to="thorn4" method="_on_thorn_body_entered"]
[connection signal="body_entered" from="thorn5" to="thorn5" method="_on_thorn_body_entered"]
[connection signal="body_entered" from="thorn2" to="thorn2" method="_on_thorn_body_entered"]
[connection signal="body_entered" from="thorn3" to="thorn3" method="_on_thorn_body_entered"]
[connection signal="body_entered" from="thorn6" to="thorn6" method="_on_thorn_body_entered"]
[connection signal="body_entered" from="thorn7" to="thorn7" method="_on_thorn_body_entered"]
[connection signal="body_entered" from="sugar" to="sugar" method="_on_sugar_body_entered"]
